# microbitv2-ble-test

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs
