[package]
edition = "2024"
name = "microbitv2-ble-test"
version = "0.1.0"
authors = ["Ralph Ursprung <ralph.ursprung@gmail.com>"]
resolver = "2"

[[bin]]
name = "microbitv2-ble-test"
test = false
bench = false

[dependencies]
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-nrf = { version = "0.3", features = ["defmt", "nrf52833", "time-driver-rtc1", "gpiote"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
nrf-softdevice = { version = "0.1", features = ["defmt", "nrf52833", "s140", "ble-peripheral", "ble-central", "critical-section", "ble-l2cap", "ble-gatt-server"] }
log = "0.4.27"

[patch.crates-io]
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", branch = "master" }